# hello-world-ncn

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  format.sh  package.json
.cargo/: config.toml  programs.env
.github/workflows/: ci.yaml
cli/: Cargo.toml
cli/src/: args.rs  handler.rs
clients/js/hello_world_ncn_client/accounts/: ballotBox.ts  config.ts  index.ts  message.ts
clients/js/hello_world_ncn_client/errors/: helloWorldNcn.ts
clients/js/hello_world_ncn_client/instructions/: index.ts  initializeBallotBox.ts  initializeConfig.ts  requestMessage.ts  submitMessage.ts
clients/js/hello_world_ncn_client/programs/: helloWorldNcn.ts  index.ts
clients/js/hello_world_ncn_client/types/: index.ts  operatorVote.ts
clients/rust/hello_world_ncn_client/: Cargo.toml
config/: program.env
core/: Cargo.toml
core/src/: ballot_box.rs  config.rs  discriminators.rs  lib.rs  message.rs  operator_vote.rs
idl/: hello_world_ncn.json
integration-tests/tests/: tests.rs
integration-tests/tests/fixtures/: hello_world_ncn_client.rs  hello_world_ncn_program-keypair.json  mod.rs  vault_client.rs
integration-tests/tests/hello_world_ncn/: initialize_config.rs  request_message.rs  submit_message.rs
integration_tests/: Cargo.toml
integration_tests/tests/fixtures/: hello_world_ncn_client.rs  mod.rs  restaking_client.rs  test_builder.rs  vault_client.rs
integration_tests/tests/hello_world_ncn/: initialize_ballot_box.rs  initialize_config.rs  mod.rs  request_message.rs  submit_message.rs
operator-cli/: Cargo.toml  Dockerfile  operators_config.json
operator-cli/src/: handler.rs
program/: Cargo.toml
program/src/: initialize_ballot_box.rs  initialize_config.rs  lib.rs  request_message.rs  submit_message.rs
scripts/: generate-clients.js
sdk/: Cargo.toml
sdk/src/: error.rs  instruction.rs  sdk.rs
shank-cli/src/: main.rs
