[workspace]
members = [
	"core",
	"integration_tests",
	"program",
	"sdk",
]

resolver = "2"

[workspace.dependencies]
borsh = "0.10.3"
curve25519-dalek = "^3.0.0"
hello-world-ncn-sdk = { path = "./sdk" }
jito-jsm-core = { package = "jito-jsm-core", git = "https://github.com/jito-foundation/restaking", bracnh = "master" }
shank = "0.4.2"
shank_idl = "0.4.2"
solana-program = "=2.1.0"
solana-program-test = "=2.1.0"
solana-sdk = "=2.1.0"
solana-rpc-client = "=2.1.0"
solana-rpc-client-api = "=2.1.0"

