[workspace]
members = [
	"core",
	"integration_tests",
	"program",
	"sdk",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
borsh = "0.10.3"
curve25519-dalek = "^3.0.0"
hello-world-ncn-program = { path = "./program" }
hello-world-ncn-sdk = { path = "./sdk" }
jito-jsm-core = { package = "jito-jsm-core", git = "https://github.com/jito-foundation/restaking", ref = "b096d1bf467813cde6f6f930ec2f6cc475324b28" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.102"
serde_with = "3.9.0"
serde-big-array = "0.5.1"
shank = "0.4.2"
shank_idl = "0.4.2"
solana-program = "2.1.0"
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"

