[package]
name = "hello-world-ncn-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { workspace = true }
hello-world-ncn-sdk = { workspace = true }
jito-account-traits-derive = { workspace = true }
jito-bytemuck = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }

