[package]
name = "hello-world-operator-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello-world-operator-cli"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
hello-world-ncn-client = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-program = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-program = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-program = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
