[package]
name = "hello-world-ncn-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_world_ncn_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet-beta = []
testnet = []
devnet = []
localhost = []

[dependencies]
borsh = { workspace = true }
const_str_to_pubkey = { workspace = true }
jito-jsm-core = { workspace = true }
jito-bytemuck = { workspace = true }
hello-world-ncn-core = { workspace = true }
hello-world-ncn-sdk = { workspace = true }
solana-program = { workspace = true }
