[package]
name = "hello-world-ncn-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_world_ncn_program"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = { workspace = true }
const_str_to_pubkey = { workspace = true }
hello-world-ncn-core = { workspace = true }
hello-world-ncn-sdk = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-core = { workspace = true }
solana-program = { workspace = true }

[lints]
workspace = true
